--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,74 @@
-/* #ff9600 #282828 #666666 */
+/* #ff9600 #120400 #baaca8 */
 
 * {
-  transition: all 300ms;
+  font-family: Nova Square;
+  font-weight: bold;
 }
 body {
   font-family: Nova Square;
-  background-color: blue;
+  background-color: darkblue;
+  transition: all 350ms;
+  color: black;
 }
 #light {
-  background-color: #666666;
+  background-color: #baaca8;
+  color: #120400;
+  transition: all 350ms;
 }
 #dark {
-  background-color: #282828;
+  background-color: #120400;
+  color: #baaca8;
+  transition: all 350ms;
+}
+.task {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: all 350ms;
+}
+.singleTask {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 0.25em;
+  border-radius: 20px;
+  font-size: 1.2em;
+  min-width: 45em;
+  margin: 0.3em 0;
+  padding: 0.4em 0;
+  transition: all 350ms;
+}
+#light .singleTask {
+  border-color: #120400;
+}
+#dark .singleTask {
+  border-color: #baaca8;
+}
+.textTask {
+  flex: 6;
+  text-align: center;
+  transition: all 350ms;
+  font-weight: bold;
+}
+.inputTask {
+  height: 2em;
+  flex: 1;
+  transition: all 350ms;
+}
+.fromTask {
+  flex: 2;
+  transition: all 350ms;
+  font-weight: bold;
+}
+.trasher {
+  height: 1em;
+  flex: 1;
+  transition: all 350ms;
+}
+.trasher:hover {
+  height: 1.5em;
+  cursor: pointer;
 }
 .header {
   color: #ff9600;
@@ -22,14 +79,15 @@ body {
   position: sticky;
   padding: 0 2em 0 0;
   top: 0px;
+  transition: all 350ms;
 }
 #light .header {
-  background-color: #666666;
-  border-color: #282828;
+  background-color: #baaca8;
+  border-color: #120400;
 }
 #dark .header {
-  background-color: #282828;
-  border-color: #666666;
+  background-color: #120400;
+  border-color: #baaca8;
 }
 .add {
   border: solid 0.3em;
@@ -38,10 +96,102 @@ body {
   width: 20em;
   height: 2em;
   color: #ff9600;
+  transition: all 350ms;
 }
 #light .add {
-  border-color: #282828;
+  border-color: #120400;
 }
 #dark .add {
-  border-color: #666666;
+  border-color: #baaca8;
+}
+.submiting {
+  border: solid 0.25em;
+  border-radius: 20px;
+  padding-left: 0.75em;
+  margin-right: 2em;
+  width: 25em;
+  transition: all 350ms;
+}
+#light .submiting {
+  border-color: #120400;
+  background-color: #baaca8;
+  color: #120400;
+}
+#light .submiting::placeholder {
+  color: #120400;
+}
+#dark .submiting {
+  border-color: #baaca8;
+  background-color: #120400;
+  color: #baaca8;
+}
+#dark .submiting::placeholder {
+  color: #baaca8;
+}
+.submiter {
+  border: solid 0.25em;
+  border-radius: 20px;
+  width: auto;
+  cursor: default;
+  transition: all 350ms;
+}
+.submiter:hover {
+  cursor: pointer;
+}
+#light .submiter {
+  border-color: #120400;
+  color: #120400;
+  background-color: #baaca8;
+}
+#dark .submiter {
+  border-color: #baaca8;
+  color: #baaca8;
+  background-color: #120400;
+}
+#light .submiter:hover {
+  color: #baaca8;
+  background-color: #120400;
+}
+#dark .submiter:hover {
+  color: #120400;
+  background-color: #baaca8;
+}
+.logo {
+  width: 15em;
+}
+.footer {
+  border-top: solid 0.25em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.linkBy {
+  margin: 2em 0.75em;
+  cursor: default;
+}
+.linkBy:hover {
+  margin: 1em 0.75em;
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+}
+#light a {
+  color: #12040090;
+}
+#light a:hover {
+  color: #12040050;
+  text-shadow: 2px 2px 4px rgba(58, 58, 58, 0.5);
+}
+#dark a {
+  color: #baaca890;
+}
+#dark a:hover {
+  color: #baaca850;
+  text-shadow: 2px 2px 4px rgba(174, 174, 174, 0.5);
+}
+.main {
+  min-height: 30em;
 }
